// quic-transport.js
// QUIC Transport Layer for Optimized Document Processing

const { createQuicSocket } = require('net');
const EventEmitter = require('events');
const crypto = require('crypto');

class QuicTransport extends EventEmitter {
    constructor(config = {}) {
        super();
        this.config = {
            port: config.port || 8443,
            cert: config.cert || null,
            key: config.key || null,
            alpn: ['h3', 'document-pipeline'],
            maxStreams: config.maxStreams || 100,
            idleTimeout: config.idleTimeout || 30000
        };
        
        this.socket = null;
        this.streams = new Map();
        this.ready = false;
        this.messageQueue = [];
        this.protobufSchemas = new Map();
    }

    async initialize() {
        try {
            // For now, fallback to WebSocket for QUIC-like behavior
            // Real QUIC implementation would use quic-go or similar
            const WebSocket = require('ws');
            
            this.server = new WebSocket.Server({
                port: this.config.port,
                perMessageDeflate: {
                    zlibDeflateOptions: {
                        chunkSize: 1024,
                        memLevel: 7,
                        level: 3
                    },
                    zlibInflateOptions: {
                        chunkSize: 10 * 1024
                    },
                    clientNoContextTakeover: true,
                    serverNoContextTakeover: true,
                    serverMaxWindowBits: 10,
                    concurrencyLimit: 10,
                    threshold: 1024
                }
            });
            
            this.server.on('connection', (ws) => {
                const streamId = crypto.randomBytes(16).toString('hex');
                
                const stream = {
                    id: streamId,
                    ws: ws,
                    ready: true,
                    write: (data) => {
                        return new Promise((resolve, reject) => {
                            ws.send(data, (err) => {
                                if (err) reject(err);
                                else resolve();
                            });
                        });
                    },
                    read: () => {
                        return new Promise((resolve) => {
                            ws.once('message', (data) => {
                                resolve(data);
                            });
                        });
                    },
                    close: () => {
                        ws.close();
                        this.streams.delete(streamId);
                    }
                };
                
                this.streams.set(streamId, stream);
                
                ws.on('close', () => {
                    this.streams.delete(streamId);
                });
                
                ws.on('error', (error) => {
                    console.error(`Stream ${streamId} error:`, error);
                    this.streams.delete(streamId);
                });
                
                this.emit('stream', stream);
            });
            
            this.ready = true;
            console.log(`âš¡ QUIC-like transport ready on port ${this.config.port}`);
            
            // Process queued messages
            this.processQueue();
            
        } catch (error) {
            console.error('Failed to initialize QUIC transport:', error);
            throw error;
        }
    }

    isReady() {
        return this.ready;
    }

    async createStream() {
        if (!this.ready) {
            throw new Error('QUIC transport not ready');
        }
        
        // For client-initiated streams
        const WebSocket = require('ws');
        const ws = new WebSocket(`ws://localhost:${this.config.port}`);
        
        return new Promise((resolve, reject) => {
            ws.on('open', () => {
                const streamId = crypto.randomBytes(16).toString('hex');
                
                const stream = {
                    id: streamId,
                    ws: ws,
                    ready: true,
                    write: (data) => {
                        return new Promise((resolve, reject) => {
                            ws.send(data, (err) => {
                                if (err) reject(err);
                                else resolve();
                            });
                        });
                    },
                    read: () => {
                        return new Promise((resolve) => {
                            ws.once('message', (data) => {
                                resolve(data);
                            });
                        });
                    },
                    close: () => {
                        ws.close();
                    }
                };
                
                resolve(stream);
            });
            
            ws.on('error', reject);
        });
    }

    async sendMessage(type, payload, priority = 0) {
        const message = {
            id: crypto.randomBytes(16).toString('hex'),
            type,
            payload,
            priority,
            timestamp: Date.now()
        };
        
        if (!this.ready) {
            // Queue message if not ready
            this.messageQueue.push(message);
            return message.id;
        }
        
        // Send to available stream or create new one
        let stream = this.getAvailableStream();
        
        if (!stream) {
            stream = await this.createStream();
        }
        
        await stream.write(Buffer.from(JSON.stringify(message)));
        
        return message.id;
    }

    getAvailableStream() {
        for (const [id, stream] of this.streams) {
            if (stream.ready) {
                return stream;
            }
        }
        return null;
    }

    async processQueue() {
        while (this.messageQueue.length > 0 && this.ready) {
            const message = this.messageQueue.shift();
            
            try {
                await this.sendMessage(message.type, message.payload, message.priority);
            } catch (error) {
                console.error('Failed to send queued message:', error);
                // Re-queue on failure
                this.messageQueue.unshift(message);
                break;
            }
        }
    }

    // Protobuf message encoding/decoding
    encodeProtobuf(schema, data) {
        // Simplified protobuf encoding
        // In production, use actual protobuf library
        return Buffer.from(JSON.stringify(data));
    }

    decodeProtobuf(schema, buffer) {
        // Simplified protobuf decoding
        return JSON.parse(buffer.toString());
    }

    async close() {
        this.ready = false;
        
        // Close all streams
        for (const [id, stream] of this.streams) {
            stream.close();
        }
        
        this.streams.clear();
        
        if (this.server) {
            await new Promise((resolve) => {
                this.server.close(resolve);
            });
        }
        
        console.log('QUIC transport closed');
    }

    // Optimized batch processing
    async sendBatch(messages) {
        const stream = await this.createStream();
        
        const batch = {
            type: 'BATCH',
            messages,
            timestamp: Date.now()
        };
        
        await stream.write(this.encodeProtobuf('batch', batch));
        
        const response = await stream.read();
        stream.close();
        
        return this.decodeProtobuf('batch_response', response);
    }

    // Priority queue management
    setupPriorityQueues() {
        this.queues = {
            high: [],
            normal: [],
            low: []
        };
        
        setInterval(() => {
            this.processPriorityQueues();
        }, 100);
    }

    async processPriorityQueues() {
        // Process high priority first
        if (this.queues.high.length > 0) {
            const message = this.queues.high.shift();
            await this.sendMessage(message.type, message.payload, 2);
        }
        // Then normal
        else if (this.queues.normal.length > 0) {
            const message = this.queues.normal.shift();
            await this.sendMessage(message.type, message.payload, 1);
        }
        // Finally low
        else if (this.queues.low.length > 0) {
            const message = this.queues.low.shift();
            await this.sendMessage(message.type, message.payload, 0);
        }
    }
}

module.exports = QuicTransport;
